# russian-doom

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CODE_OF_CONDUCT.md  COMPILING.md  CONTRIBUTING.md  Makefile.am  README.md  README.txt  THANKS.md  build_linux_packages.sh  build_toolchain_images.sh  configure.ac  crosscompile_linux_packages.sh  toolchain_images.sh  vcpkg.json
data/: CMakeLists.txt  Makefile.am  convert-icon  convert_icons.bat  desktop.in  doom.icns  heretic.icns  hexen.icns  hexen_icon.c  metainfo.xml.in  setup_icon.c  strife_icon.c
data/icon_doom/: icon.c  icon_new_doom.txt
data/icon_heretic/: icon.c  icon_new_heretic.txt
data/icon_hexen/: icon.c  icon_new_hexen.txt
data/icon_setup/: icon_new_setup.txt  setup_icon.c
data/icon_strife/: icon.c
data/icons/: CMakeLists.txt  README  convert-icon.py  doom_icon.c  heretic_icon.c
data/man/: CMakeLists.txt  author.man.in  docgen.py  doom.template.in  heretic.template.in
lib/DLL/: CMakeLists.txt
lib/pcsound/: CMakeLists.txt  pcsound.c  pcsound.h  pcsound_bsd.c  pcsound_internal.h  pcsound_linux.c  pcsound_sdl.c  pcsound_win32.c
lib/textscreen/: CMakeLists.txt  textscreen.h  txt_button.c  txt_button.h  txt_checkbox.c  txt_checkbox.h  txt_conditional.c  txt_conditional.h  txt_desktop.c  txt_desktop.h  txt_dropdown.c  txt_dropdown.h  txt_fileselect.c  txt_fileselect.h  txt_gui.c  txt_gui.h  txt_inputbox.c  txt_inputbox.h  txt_io.c  txt_io.h  txt_label.c  txt_label.h  txt_main.h  txt_radiobutton.c  txt_radiobutton.h  txt_scrollpane.c  txt_scrollpane.h  txt_sdl.c  txt_sdl.h  txt_separator.c  txt_separator.h  txt_spinctrl.c  txt_spinctrl.h  txt_strut.c  txt_strut.h  txt_table.c  txt_table.h  txt_utf8.c  txt_utf8.h  txt_widget.c  (+5 more)
man/: CMakeLists.txt  Makefile.am  author.man.in  docgen.py  doom.template.in  heretic.template.in  hexen.template.in  strife.template.in
man/bash-completion/: CMakeLists.txt  Makefile.am  doom.template.in  heretic.template.in  hexen.template.in  strife.template.in
man/ru/: CMakeLists.txt  author.man.in  doom.template.in  heretic.template.in  hexen.template.in  strife.template.in
midiproc/: CMakeLists.txt  main.c
opl/: CMakeLists.txt  Makefile.am  ioperm_sys.c  ioperm_sys.h  opl.c  opl.h  opl3.c  opl3.h  opl_internal.h  opl_linux.c  opl_obsd.c  opl_queue.c  opl_queue.h  opl_sdl.c  opl_timer.c  opl_timer.h  opl_win32.c
pcsound/: CMakeLists.txt  pcsound.c  pcsound.h  pcsound_bsd.c  pcsound_internal.h  pcsound_linux.c  pcsound_sdl.c  pcsound_win32.c
src/: .gitignore  CMakeLists.txt  Makefile.am  aes_prng.c  aes_prng.h  crispy.h  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_name.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doomfeatures.h  doomkeys.h  doomtype.h  g_sk_unm.h  gusconf.c  gusconf.h  i_cdmus.c  i_cdmus.h  i_controller.c  i_controller.h  i_endoom.c  i_endoom.h  i_glob.c  (+120 more)
src/base/: CMakeLists.txt  doom-beta-russian.wad  doom-common-russian.wad  doom-common.wad  doom-doom2-russian.wad  doom-extra.wad  doom-freedm.wad  doom-freedoom.wad  doom-godface.wad  doom-jaguar-russian.wad  doom-master-russian.wad  doom-mlevels.wad  doom-nerve.wad  doom-rotations.wad  doom-sigil.wad  doom-sigil2.wad  doom-skies-doom1.wad  doom-skies-doom2.wad  doom-skies-tnt.wad  doom-tnt-russian.wad  doom-wide-doom1.wad  doom-wide-doom2.wad  doom-wide-plutonia.wad  doom-wide-tnt.wad  freedoom-common-russian.wad  freedoom-common.wad  freedoom-dm-russian.wad  heretic-common-russian.wad  heretic-common.wad  heretic-registered-russian.wad  heretic-retail-russian.wad  hexen-beyond-russian.wad  hexen-common-russian.wad  hexen-common.wad  hexen-dd-russian.wad  hexen-demo-russian.wad  hexen-psx.wad  strife-common.wad  strife-russian.wad
src/doom/: CMakeLists.txt  Makefile.am  am_map.c  am_map.h  ct_chat.c  ct_chat.h  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_textur.h  d_think.h  deh_ammo.c  deh_bexpars.c  deh_bexpars.h  deh_bexptr.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  (+85 more)
src/heretic/: CMakeLists.txt  Makefile.am  am_data.h  am_map.c  am_map.h  ct_chat.c  ct_chat.h  d_main.c  d_net.c  deh_ammo.c  deh_frame.c  deh_htext.c  deh_htic.c  deh_htic.h  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  dstrings.h  f_finale.c  g_game.c  g_sk_unm.c  hr_local.h  hr_main.c  hr_net.c  id_lang.c  id_lang.h  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_action.h  p_ceilng.c  p_doors.c  p_enemy.c  p_fix.c  p_fix.h  (+38 more)
src/hexen/: CMakeLists.txt  Makefile.am  a_action.c  am_data.h  am_map.c  am_map.h  ct_chat.c  ct_chat.h  d_net.c  f_finale.c  g_game.c  g_sk_unm.c  h2_main.c  h2def.h  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_acs.c  p_action.h  p_anim.c  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_local.h  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_setup.c  p_sight.c  p_spec.c  p_spec.h  p_switch.c  (+38 more)
src/russian/: russian-doom-common.wad  russian-doom-doom1.wad  russian-doom-doom2.wad  russian-doom-master.wad  russian-doom-plutonia.wad  russian-doom-tnt.wad  russian-freedoom-common.wad  russian-freedoom-dm.wad  russian-heretic-common.wad  russian-heretic-demo.wad  russian-heretic-registered.wad  russian-heretic-retail.wad  russian-hexen-beyond.wad  russian-hexen-common.wad  russian-hexen-dd.wad  russian-hexen-demo.wad  russian-strife.wad
src/setup/: CMakeLists.txt  Makefile.am  compatibility.c  compatibility.h  display.c  display.h  doom-resource.rc.in  execute.c  execute.h  heretic-resource.rc.in  hexen-resource.rc.in  joystick.c  joystick.h  keyboard.c  keyboard.h  mainmenu.c  mode.c  mode.h  mouse.c  mouse.h  multiplayer.c  (+13 more)
src_classic/: Makefile.am  configure.ac
win_libs/: CMakeLists.txt
(+750 files in other folders)
